--- a/css/style.css
+++ b/css/style.css
@@ -227,3 +227,11 @@ span {
     display: block;
   }
 }
+
+.project-image img
+{
+  max-width:100%;
+  max-height:100%;
+  margin:auto;
+  display:block;
+}
