--- a/css/style.css
+++ b/css/style.css
@@ -503,6 +503,22 @@ body.offcanvas {
   margin-top: 5px;
   border: 1px solid #e6e6e6 !important; }
 
+.panel-body h2 {
+    font-size: 20px;
+    font-family: "Quicksand", Arial, sans-serif;
+    font-weight: 500;
+    color: #000;
+}
+
+.panel-body h2 span {
+    -webkit-opacity: .4;
+    -moz-opacity: .4;
+    opacity: .4;
+    -ms-filter: alpha(opacity=40);
+    filter: alpha(opacity=40);
+    font-size: 16px;
+}
+
 .timeline-centered {
   position: relative;
   margin-bottom: 30px; }
